Remove tab frame in certificate details dialog

The frame doesn't look good if the tab contains buttons.

GnuPG-bug-id: 7019