src/dialogs/useridswidget.cpp
@@ -121,7 +121,6 @@ UserIdsWidget::UserIdsWidget(QWidget *parent)
 {
     auto userIDsLayout = new QVBoxLayout{this};
     userIDsLayout->setContentsMargins({});
-    userIDsLayout->setSpacing(0);
 
     d->userIDTable = new TreeWidget{parent};
     d->userIDTable->setAccessibleName(i18n("User IDs"));
@@ -136,11 +135,7 @@ UserIdsWidget::UserIdsWidget(QWidget *parent)
 
     userIDsLayout->addWidget(d->userIDTable);
 
-    auto separator = new KSeparator(parent);
-    userIDsLayout->addWidget(separator);
-
     d->buttonRow = new QHBoxLayout;
-    d->buttonRow->setSpacing(parent->style()->pixelMetric(QStyle::PM_LayoutHorizontalSpacing));
 
     d->addUserIDBtn = new QPushButton(i18nc("@action:button", "Add User ID"), parent);
     d->buttonRow->addWidget(d->addUserIDBtn);
